@@ -16,16 +16,17 @@
 
 package com.hippo.ehviewer.client.data;
 
+import android.os.Build;
 import android.os.Parcel;
 import android.os.Parcelable;
 import android.text.TextUtils;
-import android.util.Log;
 
 import com.hippo.ehviewer.client.EhUrl;
 import com.hippo.network.UrlBuilder;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 public class FavListUrlBuilder implements Parcelable {
 
@@ -105,17 +106,21 @@ public class FavListUrlBuilder implements Parcelable {
             ub.addQuery("favcat", "all");
         }
         if (!TextUtils.isEmpty(mKeyword)) {
-            try {
-                ub.addQuery("f_search", URLEncoder.encode(mKeyword, "UTF-8"));
-                // Name
-                ub.addQuery("sn", "on");
-                // Tags
-                ub.addQuery("st", "on");
-                // Note
-                ub.addQuery("sf", "on");
-            } catch (UnsupportedEncodingException e) {
-                Log.e(TAG, "Can't URLEncoder.encode " + mKeyword);
+            if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.TIRAMISU) {
+                ub.addQuery("f_search", URLEncoder.encode(mKeyword, StandardCharsets.UTF_8));
+            } else {
+                try {
+                    ub.addQuery("f_search", URLEncoder.encode(mKeyword, StandardCharsets.UTF_8.displayName()));
+                } catch (UnsupportedEncodingException e) {
+                    e.printStackTrace();
+                }
             }
+            // Name
+            ub.addQuery("sn", "on");
+            // Tags
+            ub.addQuery("st", "on");
+            // Note
+            ub.addQuery("sf", "on");
         }
         if (mPrev != null && !mPrev.isEmpty()) {
             ub.addQuery("prev", mPrev);
